--- a/thesis.tex
+++ b/thesis.tex
@@ -517,24 +517,39 @@
     Стоит отметить, что все компоненты, кроме оценки особей, являются стохастическими. Например, мутация задевает случайную часть решения, а слабые особи имеют малый шанс выиграть в естественном отборе.
 
     \subsubsection{Составные части генетического алгоритма}
+
     \paragraph{Инициализация}
+
     Чаще всего изначальная популяция просто заполняется случайно сгенерированными особями. Однако, могут использоваться специфические для данной проблемы эвристики, которые позволяют создать более приспособленную изначальную популяцию.
+
     \paragraph{Функция оценки}
+
     Функция оценки задает требования, к которым популяция вынуждена адаптироваться. Технически, это функция, которая определяет меру качества особи. Смысл всего генетического алгоритма в минимизации функции оценки для популяции, чтобы достичь наиболее качественного решения.
+
     \paragraph{Популяция}
+
     Популяции это набор особей. Практически во всех вариантах эволюционных алгоритмов размер популяции постоянен. Отбор берет во внимание всю популяцию целиком, а не отдельно каждого индивида.
+
     \paragraph{Механизм отбора родителей}
+
     Механизм отбора родителей используется, чтобы выбрать наиболее хороших особей для того, чтобы они стали родителями для следующего поколения. Отбор родителей необходим, чтобы повысить качество будущего поколения. Для создания потомства к родителям применяют операторы вариации. Выбор родителей всегда вероятностный. Более приспособленные особи имеет более высокий шанс стать родителями, но менее приспособленным особям дается малый шанс, иначе поиск решения будет слишком жадным.
+
     \paragraph{Операторы вариации. Мутация и рекомбинация}
+
     Роль операторов вариации -- создание новых особей из старых. Обычно, разделяют операторы вариации разделяют на 2 группы по арности: унарная и n-арная версии. Все операторы вариации, обычно, стохастические. Исключением является применение операторов вариации, в которых заложено знание о проблеме. Таким образом, можно исключить образование заведомо неверных решений в популяции либо всегда создавать решения лучше их родительских.
 
     Унарный оператор вариации, обычно, называют мутацией. Мутация применяется к одной особи, производя из неё новую слегка измененную особь. Роль мутации заключается в исследовании новых мест в области значений функции оценки. Мутация позволяет избежать преждевременной сходимости в локальном минимуме.
 
     Бинарный оператор вариации, обычно, называют рекомбинацией или кроссовером. Как следует из названия, такой оператор совмещает информацию от двух родителей, сохраняя свойства от обоих. Роль кроссовера заключается в эксплуатации области значения функции оценки, занимаемой текущим поколением популяции.
+
     \paragraph{Механизм отбора выживших}
+
     После создания новых особей необходимо выбрать, какие особи составят следующее поколение популяции. Как и механизм отбора родителей, механизм отбора выживших является стохастическим и дает шанс менее приспособленным особям быть отобранными в новое поколение.
+
     \paragraph{Условие выхода}
+
     Условие выхода очень сильно зависит от задачи. Часто используют следующие варианты или их комбинации:
+
     \begin{itemize}
         \item Популяция сошлась к какому-то решение;
         \item Было достигнуто достаточно качественное решение;
@@ -544,13 +559,28 @@
     \end{itemize}
 
     \subsection{Упаковка в атлас}
+
     Для упаковки в атлас мы используем классический генетический алгоритм из \talgref{meta-genetics}, но с некоторыми модификациями, о которых будет сказано позже. Для начала перечислим конкретные имплементации всех этапов генетического алгоритма для упаковки полигональных изображений в атлас.
+
     \subsubsection{Репрезентация особей}
-    Особь является отражает решение конкретной проблемы. В нашем случае особь состоит из 2 массивов данных. В первом массиве хранятся тройки целых чисел, отвечающие за трансформацию каждого $ImageObject$ (перемещение по осям X и Y, а также поворот). В о втором массиве хранятся флаги присутствия конкретного объекта $Image$ в атласа ($true$ -- присутствует, $false$ -- отсутствует). Размер атласа подбирается отдельно и не является частью генетического алгоритма.
+    Особь представляет из себя решение задачи об упаковке для заданного размера атласа и набора изображений. Каждое изображение это набор объектов, которые из себя представляют под-меш изображения.
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.7]{images/Image.png}
+        \caption{Структуры данных Image и ImageObject}
+    \end{figure}
+
+    Особь состоит из 2 массивов данных. В первом массиве хранятся тройки целых чисел, отвечающие за трансформацию каждого $ImageObject$ (перемещение по осям X и Y, а также поворот вокруг центроида). Во втором массиве хранятся флаги присутствия конкретного $Image$ в атласе ($true$ -- присутствует, $false$ -- отсутствует). Это обусловлено тем, что всё изображение целиком должно входить в атлас, при этом его части могут быть упакованы в разные места атласа.
+
     \subsubsection{Популяция}
+
     Размер популяции константный и задается в качестве параметра для генетического алгоритма.
+
     \subsubsection{Механизм отбора родителей}
+
     Как было сказано ранее, отбор родителей это стохастический процесс, в котором более приспособленные родители имеют более высокий шанс быть выбранными, поэтому первое, что приходит на ум, это присвоить шанс выбора пропорционально значению функции оценки, то есть $P\left(i\right) = \frac{f_i}{\sum_{j=0}^{n - 1} f_i}$. Однако такое наивное решение имеет ряд недостатков:
+
     \begin{itemize}
         \item Выдающиеся особи быстро захватывают популяцию, что вырождается в преждевременной сходимости, часто, не к лучшему результату;
         \item Когда значение оценочной функции особей близко друг к другу, то выбор становится равномерно случайным;
@@ -558,10 +588,12 @@
     \end{itemize}
 
     Отбор по рангу\cite{RankingSelection} это другой метод, вдохновленный недостатками отбору по значению оценочной функции. Данный метод сортирует популяцию по значению оценочной функции и присваивает ранг каждой особи (лучшее решение имеет ранг $n - 1$, а худшее $0$). Вероятность отбора вычисляется на основе ранга, например, линейно или экспоненциально уменьшаясь от лучшего решения к худшему,
+
     \begin{align*}
         P_{linear}\left(i\right) &= \frac{2 - s}{n} + \frac{2i\left(s - 1\right)}{n\left(n - 1\right)},\\
         P_{exp}\left(i\right) &= \frac{1 - e^{-i}}{c}.
     \end{align*}
+
     где $s$ это константа $1 < s\leq 2$, а $c$ выбирается так, чтобы сумма вероятностей равнялась $1$. В алгоритме упаковки применяется отбор по рангу с экспоненциальной формулой.
 
     После присвоения вероятностей выбора каждой особи необходимо составить множество родителей. Для этого существуют такие алгоритмы, как roulette wheel или tournament selection, но в алгоритме упаковки было решено использовать \textbf{stochastic universal sampling}\cite{RankingSelection}.
@@ -594,7 +626,9 @@
     \textbf{Creep} мутация добавляет какую-то малую случайную дельту к значению гена. Например, можно добавлять к гену поворота случайный поворот в диапазоне $\left[-10, 10\right]$ градусов.
 
     \subsection{Кроссовер}
+
     В алгоритме упаковки используется простейший одноточечный кроссовер, работу которого демонстрирует следующее изображение.
+
     \begin{figure}[H]
         \centering
         \includegraphics[scale=1]{images/OnePointCrossover.png}
@@ -609,8 +643,10 @@
     \textbf{Elitism}. $e$ наиболее приспособленных особей обязательно проходят в следующее поколение. Данная стратегия позволяет не потерять наиболее хорошее решение из найденных.
 
     \textbf{Replace worst (GENITOR)}. $m$ худших особей замещаются созданными потомками.
+
     \subsection{Функция оценки}
-    Функция оценки включает в себя ограничения, накладываемые на решение, и задана таким образом, чтобы мотивировать популяцию эволюционировать в приемлемое решение как можно быстрее. Главными ограничениями является площадь пересечения полигонов и площадь выступов, образуемых минимальными и максимальными значениями координат.
+
+    Функция оценки включает в себя ограничения, накладываемые на решение, и задана таким образом, чтобы мотивировать популяцию эволюционировать в приемлемое решение как можно быстрее. Главными ограничениями является площадь пересечения полигонов и площадь выступов, образуемых минимальными и максимальными значениями координат $ImageObject$.
 
     \begin{figure}[H]
         \centering
@@ -618,15 +654,16 @@
         \caption{Площадь выступов}
     \end{figure}
 
-    Эти два ограничения мотивируют решение строиться таким образом, чтобы все фигуры попадали в атлас и не пересекались с остальными фигурами. Также в функции оценки учитывается количество изображений, не попавших в атлас, помноженное либо на среднюю площадь изображений, что мотивируют решение вобрать себя как можно больше изображений. Функция оценки это сумма перечисленных выше слагаемых с коэффициентами:
+    Эти два ограничения мотивируют решение строиться таким образом, чтобы все фигуры попадали в атлас и не пересекались с остальными фигурами. Также в функции оценки учитывается площадь изображений, не попавших в атлас, что мотивируют решение вобрать себя как можно больше изображений. Функция оценки это сумма перечисленных выше слагаемых с коэффициентами:
     \[
-        F\left(individual\right) = a \cdot S_{intersection} + b \cdot S_{outside\;ledges} + c \cdot missing \cdot S_{avg}
+        F\left(individual\right) = a \cdot S_{intersection} + b \cdot S_{outside\;ledges} + c \cdot S_{missing}
     \]
     где $c$ это коэффициент, контролируемый снаружи. С его помощью можно ослабить требование к решению, что позволит алгоритму сойтись.
 
-    Если нахождение второго и третьего слагаемых тривиально, то нахождение площади пересечения всех полигонов довольно сложно. Существуют алгоритмы, способные производить булевые операции над полигонами с дырами и самопересечениями. Например, алгоритмы Vatti\cite{Vatti}, Greiner-Hormann\cite{GreinerHormann} или Martinez\cite{Martinez}. В данной работе был реализован модифицированный алгоритм Martinez\cite{Martinez}, способный подсчитать за один проход объединение всех полигонов, однако в скорости он всё равно уступает библиотеке Clipper за авторством Angus Johnson \cite{Clipper}, которая представляет собой расширение алгоритма Vatti \cite{Vatti}. Площадь пересечения между фигурами считается, как разница площади объединения и суммы площади полигонов $S_{intersection} = S\left(\bigcup\limits_{i = 0}^{m - 1} P_i\right) - \sum\limits_{i = 0}^{m - 1}S\left(P_i\right)$.
+    Если нахождение второго и третьего слагаемых тривиально, то нахождение площади пересечения всех полигонов довольно сложно. Существуют алгоритмы, способные производить булевые операции над полигонами с дырами и самопересечениями. Например, алгоритмы Vatti \cite{Vatti}, Greiner-Hormann \cite{GreinerHormann} или Martinez \cite{Martinez}. В данной работе был реализован модифицированный алгоритм Martinez \cite{Martinez}, способный подсчитать за один проход объединение всех полигонов, однако в скорости он всё равно уступает библиотеке Clipper за авторством Angus Johnson \cite{Clipper}, которая представляет собой расширение алгоритма Vatti \cite{Vatti}. Площадь пересечения между фигурами считается, как разница площади объединения и суммы площади полигонов $S_{intersection} = S\left(\bigcup\limits_{i = 0}^{m - 1} P_i\right) - \sum\limits_{i = 0}^{m - 1}S\left(P_i\right)$.
 
     \subsection{Memetic algorithm}
+
     Данный алгоритм упаковки является расширением классического генетического алгоритма, представленного в \talgref{meta-genetics}, и является реализацией memetic algorithm, который использует процедуру локального поиска, именуемой в литературе фазой обучения (learning phase). Некоторые выбранные особи перед отбором родителей проходят проходят процедуру локального поиска, которой известна специфика решаемой проблемы и которая пытается улучшить существующее решение. В данной работе используются 2 процедуры локального поиска: \textbf{hole filling} и \textbf{physics}.
 
     \textbf{Hole filling}. Процедура пытается заполнить полигональные дыры объектами, которые потенциально могут поместиться в данную дыру.
@@ -639,7 +676,9 @@
     Условие выхода может сработать, когда ещё не все изображения упаковались (возможно, их и нельзя упаковать в тот же атлас). Для неупакованных изображений алгоритм запускается заново.
 
     \subsection{Выбор размера атласа}
+
     Размер атласа выбирается путем упаковки изображений быстрым жадным алгоритмов. Например, алгоритмом гильотины \cite{ThousandWayToPackBin}.
+
     \newpage
     \printbibliography
 \end{document}
