--- a/thesis.tex
+++ b/thesis.tex
@@ -46,15 +46,15 @@
     {\centering\section*{Введение}}
     Целью работы является решение задач упрощения полигонов и упаковки, которые играют важную роль в таких прикладных областях, как компьютерная графика, GIS системы, промышленность и т.д. Решение этой задачи также опирается на прикладную область: компьютерную графику, а именно автоматическую генерацию текстурного меша с последующей упаковкой полигональных текстур в текстурные атласы.
 
-    Упаковка в текстурные атласы это один из этапов подготовки ассетов-текстур для оптимального использования: маленькие текстуры становятся частью большого изображения -- текстурного атласа. Это позволяет минимизировать затраты по памяти, а также уменьшить количество вызовов на отрисовку. Полигонизация текстур позволяет уменьшить количество вызовов фрагментного шейдера, путем минимизации площади пустых пикселей, входящих в меш. Также это позволяет упаковать больше текстур в атлас, т.к. в полигональном виде они занимают меньшую площадь.
+    Упаковка в текстурные атласы это один из этапов подготовки ассетов-текстур для оптимального использования: маленькие текстуры становятся частью большого изображения -- текстурного атласа. Это позволяет минимизировать затраты по памяти, а также уменьшить количество вызовов на отрисовку. Текстурный меш позволяет уменьшить количество вызовов фрагментного шейдера (по сравнению с отрисовкой прямоугольника), путем минимизации площади пустых пикселей, входящих в меш. Представление текстур в виде полигонов позволяет упаковать больше текстур в атлас, так как в полигональном виде они занимают меньшую площадь.
 
-    К сожалению, нет открытых программных пакетов или статей, которые решают поставленные задачи. Все программные пакеты являются проприетарными, а известные статьи решают данные задачи в очень упрощенном виде. Это и послужило мотивацией для проведения исследований и создания новых алгоритмов.
+    Не существует открытых программных пакетов или алгоритмов, которые решают поставленные задачи. Все программные пакеты являются проприетарными, а известные статьи решают данные задачи в очень упрощенном виде. Это и послужило мотивацией для проведения исследований и создания новых алгоритмов.
 
-    В разделе "Раз" более подробно описывается проблема, подлежащая решению, дается обзор теоретических положений и практических подходов к решению поставленных задач.
+    В разделе <<Задачи упрощения полигонов и упаковки в контейнеры>> описывается важность поставленных задач для компьютерной графики и разработки игр, дается обзор теоретических положений и практических подходов к их решению.
 
-    В разделе "Два" предлагается теоретическое решение, формируются критерии оценки эффективности алгоритмов, обоснование их корректности. Также приводится описание вспомогательных и основных алгоритмов.
+    В разделе <<Алгоритмы, структуры данных и математические методы>> предлагается решение поставленных задач, приводится описание использованных и разработанных алгоритмов.
 
-    В разделе "Три" описывается применение результатов исследования в реальном проекте -- игровом движке с открытым исходным кодом <<Citrus>>.
+    В разделе <<Вычислительный эксперимент>> описывается применение результатов исследования в реальном проекте игровом проекте компании <<Game Forest>>, разработанном на игровом движке с открытым исходным кодом <<Citrus>>.
 
     \section*{Глоссарий}
     \section{Задачи упрощения полигонов и упаковки в контейнеры}
@@ -682,6 +682,9 @@
     \subsection{Выбор размера атласа}
 
     Размер атласа выбирается путем упаковки изображений быстрым жадным алгоритмов. Например, алгоритмом гильотины \cite{ThousandWayToPackBin}.
+
+    \section{Вычислительный эксперимент}
+
 
     \newpage
     \printbibliography
